# collectbase

./: .gitignore  DESIGN.md  README.md  collectbase.example.toml  pyproject.toml
collectbase/: __init__.py  checkpoint.py  cli.py  engine.py  format.py  sink.py  worker.py
collectbase/workers/: __init__.py  claude_code.py  codex.py  openclaw.py
docs/: README.md  session-format.md  worker.md
scripts/: release.sh
tests/: conftest.py  test_checkpoint.py  test_claude_code.py  test_codex.py  test_engine.py  test_format.py  test_httpsink.py  test_openclaw.py
