[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collectbase"
version = "0.1.0"
description = "Ingestion boundary — collect raw sessions from many sources, normalize, push to a memory system."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
# File-watching workers (fs events). Without it, the engine still runs
# backfill + polling; only live fs-watch is disabled.
watch = ["watchdog>=3"]
# HttpSink (push to a remote memory system over HTTP).
http = ["httpx>=0.27"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "watchdog>=3", "httpx>=0.27"]

[project.scripts]
collectbase = "collectbase.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["collectbase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
